@@ -27,18 +27,19 @@ application {
 }
 
 javafx {
-    version = '21'
-    modules = ['javafx.controls', 'javafx.fxml']
+    version = '17'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
     // implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
     //     exclude(group: 'org.openjfx')
     // }
-    implementation 'org.openjfx:javafx-controls:21.0.1'
+    implementation 'org.openjfx:javafx-controls:17.0.14'
     implementation 'org.openjfx:javafx-fxml:21.0.1'
-    //implementation 'org.openjfx:javafx-base:21.0.1'
-    //implementation 'org.openjfx:javafx-graphics:21.0.1'
+    implementation 'org.openjfx:javafx-base:21.0.1'
+    implementation 'org.openjfx:javafx-graphics:21.0.1'
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.4'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
@@ -54,11 +55,14 @@ test {
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/jSticky-${javafx.platform.classifier}.zip") as RegularFile
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages',
+               '--module-path', "${System.properties['java.home']}/jmods;${configurations.runtimeClasspath.asPath}",
+               '--add-modules', 'javafx.base,javafx.controls,javafx.graphics'
+    ]
     launcher {
         name = 'jSticky'
     }
-    forceMerge 'kotlin'
+    //forceMerge 'kotlin'
     jpackage {
         appVersion = "${version}"
         vendor = 'io.github.uniclog'
